--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Discover. Connect. Collaborate.</title>
-  <link rel="stylesheet" href="newStyle.css">
+  <link rel="stylesheet" href="style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
@@ -19,7 +19,13 @@
 </head>
 
 <body>
+
+  <!-- Main container -->
+  
   <section class="wrapper">
+
+    <!-- Header -->
+    
     <nav>
       <div class="logo">
         <img src="https://www.freeskout.com/img/freeskout.png" alt="logo">
@@ -35,14 +41,7 @@
       <i class="fa-solid fa-bars" onclick="openmenu()"></i>
     </nav>
 
-
-
-
-
-
-
-
-
+    <!-- featured page -->
 
     <div class="container-fluid">
     <div class="row">
@@ -61,8 +60,8 @@
 </div>
 
 
-
-
+<!-- Star Animation -->
+    
     <div id="stars"></div>
     <div id="stars2"></div>
     <div id="stars3"></div>
@@ -76,6 +75,7 @@
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
     crossorigin="anonymous"></script>
 
+  
     <script src="index.js"></script>
 </body>
 
